--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anansi-lineage/anansi-sdk": "^1.1.2",
+    "@heroicons/react": "^2.1.3",
+    "@next/font": "^14.1.4",
+    "ag-grid-react": "^31.3.1",
     "classnames": "^2.3.1",
+    "clsx": "^2.1.0",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
+    "next-google-fonts": "^2.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
